- Backported some fixes from trunk to make it bearable to enable E_ALL logging
- Changed help for !aliasadmin (which didn't exist) to !alias admin
- Bot doesn't tell people that there are "No news." upon login any more. Only if they ask for "!news".
- Added more spam protection (e.g. when double clicking tell links) to message queue.


-------------
Version 0.6.3
-------------
- Fixed stripping of control characters on text from IRC (logon/logoff)
- Fixed a bug where the quotes module would crash if there where no quotes in the database
- Added option to relay to suffix relayed text with a characters main. Controlled using !set relay showmain on/off
- Added option to truncate the name of the main character for relayed text.
- No Longer invites because of a bot restart if autoinvite is on, they will get invited if they were in PG before restart anyway
- Added Option to have News Spammed at PGjoin.
- Added improved handling of rerolled characters.
- Whois table is no longer wiped for AoC bots upon startup.
- Updated AO server information due to changed ports.
- Fixed bug #380461 causing the AOC Autouseradd module to never add silently.


-------------
Version 0.6.2
-------------
- Fixed double removal on !is calls for people not on the notify list
- Fixed Tyranny Port
- Fixed Update to whois table
- Fixed Check for in PG for mass invite
- Fixed Links in Main blob for maintenance
- Added Optional Timer to Raffle as well as support for Item output useing &item& lowid highid ql name
- Fixed pgleave in Raid
- Added a Fix for blobs that are too large for preg_match
- Added Relaying of Buddy Actions to Allow !online to include other org (when dif host)
- Improved Relay Bot responsed on getting bot into the pg
- Added Encription of Chat option to relay (req mhash & mcrypt)
- Added ignore setting for those users who maybe not want in your gc but want to still have relay with other org
- Added option of not having other org prefix shown
- Added Raid Status to !online