@@ -48,7 +48,8 @@ class Roll extends BaseActiveModule
 	    $roll_info is a two-dimentional indexed/associative array with these fields
 	    $roll_info[$index]['name'] == the name of the person performing the roll
 	    $roll_info[$index]['time'] == the time at which the roll was performed
-	    $roll_info[$index]['limit'] == the highest possible result of the roll
+	    $roll_info[$index]['min'] == the highest possible result of the roll		
+	    $roll_info[$index]['max'] == the highest possible result of the roll
 	    $roll_info[$index]['result'] == The result of the roll
 	    $roll_info[$index]['info'] == Everything appended after <limit> or after the !flip command
 	*/
@@ -65,8 +66,8 @@ class Roll extends BaseActiveModule
 		$this -> register_command('tell', 'verify', 'ANONYMOUS');
 
 		$this -> help['description'] = 'Throws a dice and shows the result.';
-		$this -> help['command']['roll <limit> [target]']="Rolls a number between 1 and <limit> for [target] and shows the result.";
-		$this -> help['command']['flip [target]'] = "Flips a coin for [target] and shows the result.";
+		$this->help['command']['roll <min> <max> [item]'] = "Rolls a number between <min> and <max> and shows the result. You can provide an optional [item] to record what the dice is being rolled for.";
+		$this->help['command']['flip [item]'] = "Flips a coin and shows the result. You can provide an optional [item] to record what the coin is being flipped for.";
 		$this -> help['command']['verify <num>'] = "Shows the result of roll <num>";
 
 		$this -> bot -> core("settings") -> create("Roll", "RollTime", 30, "How many seconds must someone wait before they can roll again?", "5;10;20;30;45;60;120;300;600");
@@ -83,8 +84,17 @@ class Roll extends BaseActiveModule
 		switch($com['com'])
 		{
 		    case 'roll':
-			$args = $this->parse_com($com['args'], array('limit', 'target'));
-			return($this->do_roll($name, $args['limit'], $args['target']));
+				$args = $this->parse_com($com['args'], array('min' , 'max', 'item'));
+				if (!isset($args['max']))
+				{
+					$args['max'] = $args['min'];
+					$args['min'] = 1;
+				}
+				if (!isset($args['item']))
+				{
+					$args['item'] = ""; 
+				}				
+				return ($this->do_roll($name, $args['min'], $args['max'],  $args['item']));
 			break;
 		    case 'flip':
 			return ($this->do_flip($name, $com['args']));
@@ -104,26 +114,26 @@ class Roll extends BaseActiveModule
 	{
 		if(empty($num))
 		{
-		    $num = count($this->roll_info)-1;
+			$num = count($this->roll_info);
 		}
-		if($num < 0 || $num >= count($this -> roll_info))
+		if ($num < 0 || $num > count($this->roll_info))
 		{
 		    $this->error->set("Invalid verification ID");
 		    return($this->error);
 		}
 		else
 		{
-		    $roll = $this->roll_info[$num];
+			$roll = $this->roll_info[$num - 1];
 		    $name = "##highlight##{$roll['name']}##end##";
-		    if(!empty($roll['target']))
-			$target = "Target: ##highlight##'{$roll['target']}'##end##\n";
+			if (! empty($roll['item']))
+				$item = "Target: ##highlight##'{$roll['item']}'##end##\n";
 		    $time = time() - $roll['time'];
 		    $window = "##blob_title##::: Roll verification: $num :::##end##\n\n";
 		    $window.= "Roller: ##highlight##{$name}##end##\n";
 		    $window.= "Time: ##highlight##$time seconds ago##end##\n";
-		    $window.= $target;
+			$window .= $item;
 		    $window.= "-----------------\n";
-		    $window.= "Limit: {$roll['limit']}\n";
+			$window .= "Range: {$roll['range']}\n";
 		    $window.= "Result: {$roll['result']}\n";
 		    $window.= "-----------------\n";
 		    $blob = $this->bot->core('tools')->make_blob("Roll result: {$roll['result']}. Verify id: $num", $window);
@@ -136,34 +146,34 @@ class Roll extends BaseActiveModule
 	/*
 	Starts the roll
 	*/
-	function do_roll($name, $limit, $target)
+	function do_roll($name, $min, $max, $item)
 	{
 		if (!isset($this -> lastroll[$name]) || ($this -> lastroll[$name] < time() - $this -> bot -> core("settings") -> get("Roll", "RollTime")))
 		{
-			if (empty($limit))
+			if (empty($max))
 			{
-			    $this->error->set("You need to specify a limit");
-			    return($this->error);
+				$this->error->set("You need to specify a maximum value");
+				return ($this->error);
 			}
-			if ($limit != (int)$limit)
+			if (($max != (int) $max) || $min != (int) $min)
 			{
-			    $this->error->set("The limit needs to be an integer.");
-			    return($this->error);
+				$this->error->set("The min and max values need to be an integer.");
+				return ($this->error);
 			}
-			if ($limit < 2)
+			if ($max < 2)
 			{
 			    $this->error->set("There is no point in rolling for less than one person.");
 			    return($this->error);
 			}
 			$result['name'] = $name;
 			$result['time'] = time();
-			$result['limit'] = $limit;
-			$result['result'] = rand(1, $limit);
-			$result['target'] = $target;
+			$result['range'] = "$min - $max";
+			$result['result'] = $this->bot->core("tools")->my_rand($min, $max);
+			$result['item'] = $item;
 			$this -> lastroll[$name] = time();
 			$this -> verify[$ver_num]["time"] = time();
 			$this -> roll_info[]=$result;
-			return($this->verify(count($this->roll_info)-1));
+			return ($this->verify(count($this->roll_info)));
 		}
 		else
 		return "You may only roll once every " . $this -> bot -> core("settings") -> get("Roll", "RollTime") . " seconds.";
@@ -174,18 +184,18 @@ class Roll extends BaseActiveModule
 	/*
 	Starts the flip
 	*/
-	function do_flip($name, $target)
+	function do_flip($name, $item)
 	{
 		if (!isset($this -> lastroll[$name]) || ($this -> lastroll[$name] < time() - $this -> bot -> core("settings") -> get("Roll", "RollTime")))
 		{
 			$result['name'] = $name;
 			$result['time'] = time();
-			$result['limit'] = 'heads/tails';
-			$result['result'] = (rand(0, 1) ? 'heads' : 'tails');
-			$result['target'] = $target;
+			$result['range'] = 'heads/tails';
+			$result['result'] = ($this->bot->core("tools")->my_rand(0, 1) ? 'heads' : 'tails');
+			$result['item'] = $item;
 			$this -> lastroll[$name] = time();
 			$this -> roll_info[] = $result;
-			return($this->verify(count($this->roll_info)-1));
+			return ($this->verify(count($this->roll_info)));
 		}
 		else
 		return "You may only flip once every " . $this -> bot -> core("settings") -> get("Roll", "RollTime") . " seconds.";
