@@ -246,7 +246,7 @@ class Rolls extends BaseActiveModule
 				$count = count($list)-1;
 
 				for($i = 1; $i <= 10000; $i++)
-					$list[$users[rand(0, $count)]] += 1;
+					$list[$users[$this->bot->core("tools")->my_rand(0, $count)]] += 1;
 
 				natsort($list);
 
