@@ -18,6 +18,9 @@ Version 0.6.4
 - Changed help for !aliasadmin (which didn't exist) to !alias admin
 - Bot doesn't tell people that there are "No news." upon login any more. Only if they ask for "!news".
 - Added more spam protection (e.g. when double clicking tell links) to message queue.
+- Added this->bot->core("tools")->my_rand($min=false, $max=false) wrapper to call random number generator.
+- !roll should work properly now.
+- Improved !raffle logic slightly. Will now determine the number of times to do a roll depending on the number of people in the raffle.
 
 
 -------------
